--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@
         <label for="cipher-select" class="block text-gray-700">Choose cipher:</label>
         <select id="cipher-select" class="w-full mt-1 p-2 border rounded">
             <option value="caesar">Caesar Cipher</option>
+            <option value="polybius">Polybius square</option>
         </select>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-4" id="text-input-wrapper-1">
         <label for="text-input-1" id="text-input-label-1" class="block text-gray-700">Text:</label>
-        <input type="text" id="text-input-1" class="w-full mt-1 p-2 border rounded" placeholder="Enter your text here">
+        <input type="text" id="text-input-1" class="w-full mt-1 p-2 border rounded" >
     </div>
 
-    <div class="mb-4">
+    <div class="mb-4" id="text-input-wrapper-2">
         <label for="text-input-2" id="text-input-label-2" class="block text-gray-700">Key:</label>
-        <input type="number" id="text-input-2" class="w-full mt-1 p-2 border rounded" placeholder="Enter shift value" min="1" max="25">
+        <input type="text" id="text-input-2" class="w-full mt-1 p-2 border rounded" >
+    </div>
+
+    <div class="mb-4" id="text-input-wrapper-3">
+        <label for="text-input-3" id="text-input-label-3" class="block text-gray-700">Key:</label>
+        <input type="text" id="text-input-3" class="w-full mt-1 p-2 border rounded" >
     </div>
 
     <div class="flex space-x-4 mb-4">
