feat(lab03): Vigenère Cipher

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caesar Cipher Encryption & Decryption</title>
+    <title>Ciphers Encryption & Decryption</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="index.js" defer></script>
 </head>
@@ -15,8 +15,9 @@
     <div class="mb-4">
         <label for="cipher-select" class="block text-gray-700">Choose cipher:</label>
         <select id="cipher-select" class="w-full mt-1 p-2 border rounded">
-            <option value="caesar">Caesar Cipher</option>
+            <option value="caesar">Caesar cipher</option>
             <option value="polybius">Polybius square</option>
+            <option value="vigenere">Vigenère cipher</option>
         </select>
     </div>
 
