feat(lab04): Playfair Cipher

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <option value="caesar">Caesar cipher</option>
             <option value="polybius">Polybius square</option>
             <option value="vigenere">Vigenère cipher</option>
+            <option value="playfair">Playfair cipher</option>
         </select>
     </div>
 
