feat(lab05): RSA

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <option value="polybius">Polybius square</option>
             <option value="vigenere">Vigenère cipher</option>
             <option value="playfair">Playfair cipher</option>
+            <option value="rsa">RSA</option>
         </select>
     </div>
 
